--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -108,9 +108,19 @@
 	box-shadow: inset 0px 0px 10px rgba(0,0,0,0.3); 
 }
 
+/* input창 type:number 화살표 제거 */
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
 /*****************************************************************
 * main 관련 CSS
 *****************************************************************/
+
+
 
 /* 로그인 아이디 input */
 #id_input{
